Crud sur SpaceDocument et envoi de document fait

--- a/templates/space_document/index.html.twig
+++ b/templates/space_document/index.html.twig
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
+                <th>Name of the document</th>
                 <th>actions</th>
             </tr>
         </thead>
